[package]
name = "mdbook-driver"
version = "0.5.0-alpha.1"
description = "High-level library for running mdBook"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
mdbook-core.workspace = true
mdbook-preprocessor.workspace = true
mdbook-renderer.workspace = true
regex.workspace = true
serde_json.workspace = true
shlex.workspace = true
toml.workspace = true

[lints]
workspace = true
