[package]
name = "mdbook-markdown"
version = "0.5.2"
description = "Markdown processing used in mdBook"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pulldown-cmark.workspace = true
regex.workspace = true
tracing.workspace = true

[lints]
workspace = true
