[package]
name = "mdbook-preprocessor"
version = "0.5.0-alpha.1"
description = "Library to assist implementing an mdBook preprocessor"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mdbook-core.workspace = true

[lints]
workspace = true
