[package]
name = "mdbook-preprocessor"
version = "0.5.0-beta.1"
description = "Library to assist implementing an mdBook preprocessor"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
mdbook-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
