[package]
name = "mdbook-renderer"
version = "0.5.1"
description = "Library to assist implementing an mdBook renderer"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
mdbook-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
