[package]
name = "guide-helper"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
mdbook-preprocessor.workspace = true
semver.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
